# ProjectInternetApplication

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  blueprints.py  cli.py  config.py  extensions.py
app/auth/: forms.py  routes.py  utils.py
app/core/: routes.py
app/matches/: routes.py
app/models/: __init__.py
app/static/css/: main.css
app/templates/: base.html  index.html
app/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
app/templates/matches/: detail.html
app/templates/tournaments/: create.html  detail.html  list.html
app/templates/users/: dashboard.html
app/tournaments/: forms.py  routes.py
app/users/: routes.py
migrations/versions/: 224858ab29ab_add_match_report_fields.py  3475335b2095_initial_migration.py
tests/: test_health.py
